# generate-tiff-offsets

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  README.rst  index.html  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: publish.yml
.github/workflows/: test.yml
generate_tiff_offsets/: __init__.py  cli.py  generate_tiff_offsets.py
src/generate_tiff_offsets/: __init__.py
tests/: __init__.py  test_generate_tiff_offsets.py
tests/test-input/: multi-channel.offsets.json
tests/test-output-expected/: multi-channel.offsets.json
